3)_traefik/9)_ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-beta-class: "true"
  labels:
    app: traefik
  name: traefik
spec:
  controller: traefik.io/ingress-controller
