3)_traefik/7)_svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: beta
  labels:
    app: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
      name: web
    - protocol: TCP
      port: 443
      targetPort: websecure
      name: websecure
    - protocol: TCP
      port: 12093
      targetPort: tcp
      name: tcp
    - protocol: TCP
      port: 9100
      targetPort: metrics
      name: metrics
